--- a/Chrome/css/skin.css
+++ b/Chrome/css/skin.css
@@ -143,6 +143,7 @@ body #search-top input[type="search"] {
 	background: #282828;
 	font-weight: normal;
 	outline: none;
+	color: #fff;
 }
 
 body #search-top button {
